2012-09-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add udevadm trigger --action=change line to udev script
     to support initramfs better

2012-08-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Read /etc/sysconfig/console when needed in rc

2012-06-17 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Only mount /run in mountvirtfs if it is not already mounted
     (from an initrd).
   * Force the /dev/shm->/run/shm symlink
   * Skip making LVM virtual groups unavailable at shutdown
     because the / or swap partitions may be still in use.

2012-05-30 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Copy all entries in /lib/udev/devices to /dev in mounvirtfs

2012-05-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove mkdir from mountvirtfs because fs is read only

2012-04-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>

   * General update of network scripts ifup/ifdown and services
   ** Add if_true utility function to init_functions
   ** Change variable INTERFACES to COMPONENT_INTERFACES for bridge interface
   ** ifdown now only uses the first SERVICE
   ** Updated ifup.8 to reflect current usage
   ** ifup
   *** Move interface up logic to after service scripts.  Eliminates the 
       need for the LINK_CHECK variable.
   *** Sets the GATEWAY if the variable is set
   *** Add MTU logic to ifup

2012-01-22  Matt Burgess <matthew@linuxfromscratch.org>

   * lfs/init.d/udev: Change udevd path following upstream changes to its
                      location

2011-12-23  Matt Burgess <matthew@linuxfromscratch.org>

   * lfs/init.d/mountvirtfs: Correct permissions on /run/shm

2011-11-28  DJ Lucas <dj@linuxfromscratch.org>

   * lfs/init.d/mountfs: Add '-t nosysfs' to umount command
   * lfs/init.d/mountvirtfs: remove unneeded spaces in output
   * lfs/init.d/rc: Correct double interactive prompt and set prompt defaults
   * lfs/init.d/setclock: Remove screen output from start case (udev)
   * lfs/init.d/udev{,_retry}:  Restore output to screen and log