@@ -37,6 +37,16 @@
 -->
 
     <listitem>
+      <para>2012-09-27</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Add boot/shutdown script customization
+          instructions.</para> 
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2012-10-02</para>
       <itemizedlist>
         <listitem>
