@@ -29,9 +29,7 @@ write_net_rules      - Scripts for LFS rules
 write_cd_rules
 rule_generator.functions
 
-doc                  - Documentation for LFS installed rules
-doc/55-lfs.txt
-doc/README
+55-lfs.txt           - Documentation for LFS installed rules
 
 cfg.h                - Basic info needed for udev compilation
 
